--- a/celestia/macosx/defaults.plist
+++ b/celestia/macosx/defaults.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Celestia-1.4.0</key>
@@ -7,15 +7,15 @@
 		<key>altSurface</key>
 		<integer>0</integer>
 		<key>ambientLightLevel</key>
-		<real>0.10000000000000001</real>
+		<integer>1</integer>
 		<key>dateFormat</key>
 		<integer>1</integer>
 		<key>faintestVisible</key>
-		<real>7</real>
+		<integer>12</integer>
 		<key>fullScreenMode</key>
-		<integer>0</integer>
+		<integer>1</integer>
 		<key>galaxyBrightness</key>
-		<real>0.0</real>
+		<integer>1</integer>
 		<key>hudDetail</key>
 		<integer>1</integer>
 		<key>minimumFeatureSize</key>
@@ -63,7 +63,7 @@
 		<key>showCraterLabels</key>
 		<integer>1</integer>
 		<key>showDiagrams</key>
-		<integer>0</integer>
+		<integer>1</integer>
 		<key>showDorsumLabels</key>
 		<integer>1</integer>
 		<key>showEclipseShadows</key>
@@ -111,7 +111,7 @@
 		<key>showOpenClusters</key>
 		<integer>0</integer>
 		<key>showOrbits</key>
-		<integer>0</integer>
+		<integer>1</integer>
 		<key>showOtherLabels</key>
 		<integer>1</integer>
 		<key>showPateraLabels</key>
